--- a/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/othermem_mypage_exhint_detailpage.html
@@ -178,7 +178,7 @@
 	    strHtml += '    <div class="icon_box">';
 	    strHtml += '        <ul>';
 	    strHtml += '            <li class="day">'+ (comt.dateDiff >= 24 ? comt.comtRegDt.substring(0, comt.comtRegDt.length-3) : setTimeFormat(comt.comtRegDt)) +'</li>';
-	    strHtml += '            <li><p class="ico_good"></p><span>'+ comt.comtLikes +'</span></li>';
+	    strHtml += '            <li><p class="ico_good"   onclick="likeCheckYn(' + comt.comtSq + ');" style="cursor: pointer;"></p><span>'+ comt.comtLikes +'</span></li>';
 	    strHtml += '            <li onclick="scrapCheck('+comtSq+');" style="cursor: pointer;"><p class="ico_scrap"></p><span>'+ comt.comtScraps +'</span></li>';
 	    strHtml += '            <li><p class="ico_hits"></p><span>'+ comt.comtViews +'</span></li>';
 	    strHtml += '            <li><p class="ico_comments"></p><span>'+ comt.comtCmts +'</span></li>';
@@ -283,6 +283,80 @@
 	        error: function(error) {
 	            alert("오류 발생" + error);
 	        }
+		});
+	}
+	
+	// 좋아요 체크 여부 조회
+	function likeCheckYn(sqNumber) {
+		$.ajax({
+			type : "post",
+			url : "/member/myPage/likeCheck",
+			data : {
+				mbrSq : sMbrSqVal,
+				comtSq : sqNumber,
+			},
+			success : function(data) {
+				if (data > 0) {
+					if (confirm("해당 게시물에 좋아요를 취소하시겠습니까?")) {
+						likeDel(sqNumber);
+					}
+				} else {
+					if (confirm("해당 게시물에 좋아요를 추가하시겠습니까?")) {
+						likeAdd(sqNumber);
+					}
+				}
+			},
+			error : function(error) {
+				alert("오류 발생" + error);
+			}
+		});
+	}
+
+	// 좋아요 추가
+	function likeAdd(sqNumber) {
+		$.ajax({
+			type : "post",
+			url : "/member/myPage/likeAdd",
+			data : {
+				mbrSq : sMbrSqVal,
+				comtSq : sqNumber
+			},
+			success : function(data) {
+				if (data > 0 || data == null) {
+					alert("해당 게시물에 좋아요를 추가했습니다.");
+					location.reload();
+				} else {
+					alert("좋아요 추가 실패했습니다.");
+					location.reload();
+				}
+			},
+			error : function(error) {
+				alert("오류 발생" + error);
+			}
+		});
+	}
+
+	// 좋아요 취소
+	function likeDel(sqNumber) {
+		$.ajax({
+			type : "post",
+			url : "/member/myPage/likeDel",
+			data : {
+				mbrSq : sMbrSqVal,
+				comtSq : sqNumber
+			},
+			success : function(data) {
+				if (data > 0) {
+					alert("좋아요를 취소했습니다.");
+					location.reload();
+				} else {
+					alert("좋아요 취소 실패했습니다.");
+					location.reload();
+				}
+			},
+			error : function(error) {
+				alert("오류 발생" + error);
+			}
 		});
 	}
     </script>
