1. [W/M > 메인페이지] 오류&수정사항 [검수반려건] 수정사항 적용 커밋

--- a/src/main/resources/templates/thymeleaf/da_main.html
+++ b/src/main/resources/templates/thymeleaf/da_main.html
@@ -689,7 +689,8 @@
     
     //mgz>Insights 이동
     function mgzDetail(mgzSq){
-	  	location.href = "/mgz9/insights?mgzSq="+mgzSq;
+	  	//location.href = "/mgz9/insights?mgzSq="+mgzSq;
+    	location.href = "/mgz9/magazine9_main";
   	}
   
     
