--- a/src/main/resources/templates/thymeleaf/fo/community/community_home.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_home.html
@@ -234,7 +234,7 @@
             <div class="posts_warp">
                 <div class="intro_posts">
                     <div class="tit_wrap">
-                        <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개 베스트 게시물</span></h2>
+                        <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시소개 / 후기 베스트 게시물</span></h2>
                         <button class="btn_more" onclick="btnMore('EXH');">더보기</button>
                     </div>
                     <ol>
