--- a/src/main/resources/templates/thymeleaf/fo/community/community_works.html
+++ b/src/main/resources/templates/thymeleaf/fo/community/community_works.html
@@ -112,7 +112,7 @@
                     <li><a href="/community/exhintList">전시 소개&후기</a></li>
                     <li><a href="/community/issueList">이슈</a></li>
                     <li><a href="/community/event">이벤트</a></li>
-                    <li class="pt0 mt10"><button class="btn_recording" onclick="location.href='/myPage/main'">기록하기</button></li>
+                    <li class="pt0 mt10"><button class="btn_recording" onclick="exLoginCheck()">기록하기</button></li>
                 </ul>
             </div>
             <div class="input_wrap">
@@ -288,13 +288,17 @@
 				comtSq : sqNumber,
 			},
 			success : function(data) {
-				if (data > 0) {
-					if (confirm("해당 게시물에 좋아요를 취소하시겠습니까?")) {
-						likeDel(sqNumber);
-					}
+				if(sMbrSqVal == null) {
+	        		modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
 				} else {
-					if (confirm("해당 게시물에 좋아요를 추가하시겠습니까?")) {
-						likeAdd(sqNumber);
+					if (data > 0) {
+						if (confirm("해당 게시물에 좋아요를 취소하시겠습니까?")) {
+							likeDel(sqNumber);
+						}
+					} else {
+						if (confirm("해당 게시물에 좋아요를 추가하시겠습니까?")) {
+							likeAdd(sqNumber);
+						}
 					}
 				}
 			},
@@ -306,6 +310,7 @@
 
 	// 좋아요 추가
 	function likeAdd(sqNumber) {
+		debugger;
 		$.ajax({
 			type : "post",
 			url : "/member/myPage/likeAdd",
@@ -354,83 +359,98 @@
    	
    	
    	// 커뮤니티 작품리스트 스크랩 버튼
-   		// 스크랩 체크
-		function scrapCheck(sqNumber){
-			$.ajax({
-		        type: "post",
-		        url: "/member/myPage/scrapCheck",
-		        data: {
-		        	mbrSq : sMbrSqVal,
-		        	comtSq : sqNumber
-		        },
-		        success: function(data) {
-		        	if(sMbrSqVal == null) {
-						modalAlertShow("로그인 된 회원만 이용 할 수 있습니다.");
-					} else {
-			        	if(data > 0){
-			        		if(confirm("스크랩 목록에서 '제거'하시겠습니까?")){
-			        			scrapDel(sqNumber);
-			        	    }
-			        	}else{
-			        		if(confirm("스크랩 목록에 '추가'하시겠습니까?")){
-			        			scrapAdd(sqNumber);
-			        	    }
-			        	}
-					}
-		        },
-		        error: function(error) {
-		            alert("오류 발생" + error);
-		        }
-			});
-		}
-		
-		//스크랩 추가
-		function scrapAdd(sqNumber){
-			$.ajax({
-		        type: "post",
-		        url: "/member/myPage/scrapAdd",
-		        data: {
-		        	mbrSq : sMbrSqVal,
-		        	comtSq : sqNumber
-		        },
-		        success: function(data) {
+  	// 스크랩 체크
+	function scrapCheck(sqNumber){
+		$.ajax({
+	        type: "post",
+	        url: "/member/myPage/scrapCheck",
+	        data: {
+	        	mbrSq : sMbrSqVal,
+	        	comtSq : sqNumber
+	        },
+	        success: function(data) {
+	        	if(sMbrSqVal == null) {
+	        		modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
+				} else {
 		        	if(data > 0){
-		        		alert("스크랩 목록에 '추가'되었습니다.");
-		        		location.reload();
+		        		if(confirm("스크랩 목록에서 '제거'하시겠습니까?")){
+		        			scrapDel(sqNumber);
+		        	    }
 		        	}else{
-		        		alert("스크랩 목록 등록에 실패했습니다. 관리자에게 문의하세요.");
-		        		location.reload();
+		        		if(confirm("스크랩 목록에 '추가'하시겠습니까?")){
+		        			scrapAdd(sqNumber);
+		        	    }
 		        	}
-		        },
-		        error: function(error) {
-		            alert("오류 발생" + error);
-		        }
-			});
-		}
+				}
+	        },
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+	}
 		
-		//스크랩 제거
-		function scrapDel(sqNumber){
-			$.ajax({
-		        type: "post",
-		        url: "/member/myPage/scrapDel",
-		        data: {
-		        	mbrSq : sMbrSqVal,
-		        	comtSq : sqNumber
-		        },
-		        success: function(data) {
-		        	if(data > 0){
-		        		alert("스크랩 목록에서 '제거'되었습니다.");
-		        		location.reload();
-		        	}else{
-		        		alert("스크랩 목록 제거에 실패했습니다. 관리자에게 문의하세요.");
-		        		location.reload();
-		        	}
-		        },
-		        error: function(error) {
-		            alert("오류 발생" + error);
-		        }
-			});
+	//스크랩 추가
+	function scrapAdd(sqNumber){
+		$.ajax({
+	        type: "post",
+	        url: "/member/myPage/scrapAdd",
+	        data: {
+	        	mbrSq : sMbrSqVal,
+	        	comtSq : sqNumber
+	        },
+	        success: function(data) {
+	        	if(data > 0){
+	        		alert("스크랩 목록에 '추가'되었습니다.");
+	        		location.reload();
+	        	}else{
+	        		alert("스크랩 목록 등록에 실패했습니다. 관리자에게 문의하세요.");
+	        		location.reload();
+	        	}
+	        },
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+	}
+		
+	//스크랩 제거
+	function scrapDel(sqNumber){
+		$.ajax({
+	        type: "post",
+	        url: "/member/myPage/scrapDel",
+	        data: {
+	        	mbrSq : sMbrSqVal,
+	        	comtSq : sqNumber
+	        },
+	        success: function(data) {
+	        	if(data > 0){
+	        		alert("스크랩 목록에서 '제거'되었습니다.");
+	        		location.reload();
+	        	}else{
+	        		alert("스크랩 목록 제거에 실패했습니다. 관리자에게 문의하세요.");
+	        		location.reload();
+	        	}
+	        },
+	        error: function(error) {
+	            alert("오류 발생" + error);
+	        }
+		});
+	}
+	
+	// 기록하기 버튼 로그인체크 및 페이지 이동
+	function exLoginCheck() {
+		if(sMbrSqVal != null && sMbrSqVal != ""){
+			modalConfirm("기록하기 페이지로 이동합니다.", 
+					function(confirm){
+						if(confirm){
+							location.href="/myPage/main";
+						}
+				}
+			);
+		}else{
+			modalAlertShow("로그인 후 이용하실 수 있습니다.", "login");
 		}
+   	}
     </script>
 </body>
 </html>
