--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_common_left.html
@@ -35,7 +35,7 @@
                       	<a>마이페이지</a>
                       </li>
                       <li th:unless="${#strings.isEmpty(mbrSq)}" class="on" data-id= "1" style ="cursor: pointer;" onclick = listToggle(this);>
-                      	<a>타인페이지</a>
+                      	<a>페이지</a>
                       </li>
                       
                       <li id ="mypage_list_ui" th:if="${#strings.isEmpty(mbrSq)}">
