--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_mo.html
@@ -99,7 +99,7 @@
 	<th:block th:replace="thymeleaf/header :: headerFragment"></th:block>
     <div id="container">
         <div class="mypage_wrap">
-            <h2>전시후기/소개</h2>
+            <h2>전시소개, 후기</h2>
             <div class="mypage_contents">
             <div id="left_menu"></div>
                 <div class="contents_left">
