--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2.html
@@ -233,7 +233,7 @@
 						<ul>
 							<li><button type="button" class="registration" onclick="myexhibitReg()"><span>등록</span></button></li>
 							<li><button type="button" onclick="myexhibitStorage()"><span>임시저장</span></button></li>
-							<li><button type="button" ><span>미리보기</span></button></li>
+							<!-- <li><button type="button" ><span>미리보기</span></button></li> -->
 							<li><button type="button" onclick="javascript:history.back();"><span>취소</span></button></li>
 						</ul>
 					</div>
