--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_exhint_page2_mo.html
@@ -233,7 +233,7 @@
 	                    <ul>
 	                        <li><button type="button" class="registration" onclick="myWorkReg()">등록</button></li>
 	                        <li><button type="button" onclick="myWorkStorage()">임시저장</button></li>
-	                        <li><button type="button">미리보기</button></li>
+	                        <!-- <li><button type="button">미리보기</button></li> -->
 	                        <li><button type="button" onclick="javascript:history.back();">취소</button></li>
 	                    </ul>
 	                </div>				
