--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_myworks_mo.html
@@ -235,7 +235,7 @@
                     <div  id="columns2" class="grid" style= "text-align: center;margin-top: 100px;">
 					</div>
                     <!-- mobile html 끝 -->                    
-                    <div style="font-size: 28px;text-align: center;margin-top: 100px;">나의 작품 페이지 링크하기</div>
+                    <!-- <div style="font-size: 28px;text-align: center;margin-top: 100px;">나의 작품 페이지 링크하기</div> -->
               </div>
             </div>
         </div>
