--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_main.html
@@ -141,7 +141,7 @@
                   <div class="mypage_posts_warp">
                     <div class="intro_posts">
                         <div class="tit_wrap">
-                            <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시후기 / 소개</span><em id="myExhbnTotal">+99</em></h2>
+                            <h2><img src="/resources/img/img_new/ico_intro.png" alt=""><span>전시소개, 후기</span><em id="myExhbnTotal">+99</em></h2>
                             <a href="/myPage/exhint" class="btn_more">더보기</a>
                         </div>
                         <ol id="myExhbn">
