--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_scrap_mo.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_scrap_mo.html
@@ -167,7 +167,7 @@
                             <li class="bg_no">아티스트 필름</li>
                         </ul>
                     </div>                    
-                    <div style="font-size: 28px;text-align: center;margin-top: 100px;">나의 작품 페이지 링크하기</div>
+                    <!-- <div style="font-size: 28px;text-align: center;margin-top: 100px;">나의 작품 페이지 링크하기</div> -->
               </div>
             </div>
         </div>
