대리 조수빈 딜링아트 유지보수건 커밋

--- a/src/main/resources/templates/thymeleaf/fo/member/join_2.html
+++ b/src/main/resources/templates/thymeleaf/fo/member/join_2.html
@@ -97,7 +97,7 @@
 						<div class="input-box">
 							<div class="input-drox"><input type="password" class="input-3" placeholder="비밀번호" id="mbrPasswrd" name="mbrPasswrd"/></div>
 							<p class="inp-p" id="mbrPwdCheckU">영문/숫자/특수문자 2가지 이상 조합 (8~20자)</p>
-							<p class="inp-p" id="mbrPwdCheckD">아이디(이메일) 제외</p>
+							<p class="inp-p" id="mbrPwdCheckD">아이디(이메일) 제외</p>kk
 						</div>
 						<div class="input-box">
 							<div class="input-drox"><input type="password" class="input-3" placeholder="비밀번호 확인" id="mbrPasswrdConfirm" name="mbrPasswrdConfirm" required/></div>
