--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -358,17 +358,6 @@ top:0;
     transform: translateY(-50%);
 } */
 
-.cont-title h3 {
-    font-size: 20px;
-    padding-left: 22px;
-    display: inline-block;
-    position: relative;
-    margin-bottom: 61px;
-    font-weight: 600;
-}
-
-
-
 .swi-box {
     position: relative;
 }
@@ -445,25 +434,25 @@ top:0;
 
 .cont-title h3 {
     font-size: 26px;
-    padding-left: 0;
+    padding-left: 3.4rem;
     display: inline-block;
     position: relative;
     margin-bottom: 25px;
-    font-weight: 500;
-    letter-spacing: -1.5px;
+    font-weight: 600;
 }
 
 
-/* .cont-title h3::after {
+.cont-title h3::after {
     content: "";
     position: absolute;
     left: 0px;
-    width: 4px;
+    width: 1rem;
     height: 47px;
     background-color: rgb(233, 98, 92);
     top: 50%;
     transform: translateY(-50%);
-} */
+}
+
 .ct-more {
     position: absolute;
     right: 0px;
@@ -6023,7 +6012,7 @@ position: relative;background-color: #fbfbfb;}
 
 .work-drp-2{}
 .work-drp-2:after{content:'';}
-.work-drp-2 .wd-box{ max-width: 750px; width: 100%; margin: 0 auto; background: #e9625c; border-top: #eee 2px solid; padding: 20px 0; border-radius: 11px; margin-top: 14px;}
+.work-drp-2 .wd-box{ max-width: 320px; width: 100%; margin: 0 auto; background: #e9625c; border-top: #eee 2px solid; padding: 20px 0; border-radius: 11px; margin-top: 14px; text-align: center;}
 .work-drp-2 .wd-box .wd-btns{ padding: 3px 16px 5px 16px; font-size: 19px; background: #fff; border-radius: 12px; margin: 0 5px; min-width: 120px;}
 .dp_n{display:none;}
 .wd-btns{display:none;}
