--- a/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/mypage_work_regipage2.html
@@ -2300,6 +2300,9 @@ function myWorkReg(){
     			        	if(data == 1){
     			        		modalAlertShow("작품이 등록되었습니다.", "");
     			        		location.href='/myPage/workList';
+    			        	}else if(data > 1){
+    			        		modalAlertShow("작품이 등록되었습니다.", "");
+    			        		location.href='/myPage/workList';
     			        	}else{
     			        		modalAlertShow("작품 등록에 실패했습니다. 다시 시도해주세요.", "reload");
     			        	}
